--- a/index.html
+++ b/index.html
@@ -1,9 +1,28 @@
 <!DOCTYPE html>
-<html>
+<!-- ICS2O-Unit1-03-HTML-hello_world -->
+<html lang="en-ca">
   <head>
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta name="description" content="My first webpage, with proper style">
+    <meta name="keywords" content="mths, icd2o">
+    <meta name="author" content="Shanea Jaromay">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My first webpage, with proper style</title>
   </head>
-  <body>
-    <p>Paragraph</p>
+  <style>
+  #my-header {
+    background-color: #c3f4ff;
+    color: hsl(147, 50% 47%);
+    padding: 40px;
+    text-align: center;
+  }
+  </style>
+  <body style="background-color:#bab0e6;">
+    <h1 id="my-header">Style is important</h1>
+    <p style="background-color:hwb(280 79% 0%);">Proper HTML style is important</p>
+    <img src="./images/HTML-style-guide.jpeg" alt="style">
+    <p>
+    <a href="./cities.html">My cities page</a>
+    </p>
   </body>
 </html>
