--- a/cities.html
+++ b/cities.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <!-- ICS2O-Unit1-03-HTML-hello_world -->
 <html lang="en-ca">
-
 <head>
-  <meta charset="utf-8">
-  <meta name="description" content="My second webpage, with proper style">
-  <meta name="keywords" content="mths, icd2o">
-  <meta name="author" content="Mr. Coxall">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="description" content="My second webpage, with proper style">
+    <meta name="keywords" content="mths, icd2o">
+    <meta name="author" content="Mr. Coxall">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cities</title>
 </head>
 <style>
@@ -21,13 +20,13 @@
 
   /* Style all elements with the class name "city" */
   .city {
-    background-color: tomato;
-    color: white;
+    background-color: #a7f6ff;
+    color: #000000;
     padding: 10px;
   }
 </style>
 
-<body style="background-color:green;">
+<body style="background-color:#c6a4ff;">
   <!-- An element with a unique id -->
   <h1 id="my-header">Capital Cities</h1>
   <!-- Multiple elements with same class -->
